# vdrop

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  Side_bar.tsx  recived.tsx  send_file.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
