[package]
name = "vdrop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dns-lookup = "3.0.1"
local-ip-address = "0.6.6"
rfd = "0.16.0"
tokio = { version = "1.48.0", features = ["full"] }
ping-rs = "0.1.2"
hostname = "0.4.2"
futures = "0.3.31"
tauri-plugin-dialog = "2.4.2"
base64 = "0.22.1"
dirs = "6.0.0"
pinger = "2.1.1"
surge-ping = "0.8.3"


